ngselect dropdown visibility issue fixed  while changing language from admin panel
unwanted css removed that hides the typed text and make it feel more like a dropdown

--- a/client/app/css/components/ng-select.css
+++ b/client/app/css/components/ng-select.css
@@ -76,10 +76,6 @@
   flex: 1;
 }
 
-.ng-select .ng-select-container .ng-value-container .ng-input {
-  opacity: 0;
-}
-
 .ng-select .ng-select-container .ng-value-container .ng-input > input {
   box-sizing: content-box;
   background: none transparent;
@@ -89,12 +85,6 @@
   padding: 0;
   cursor: default;
   width: 100%;
-}
-
-.ng-select .ng-select-container .ng-value-container .ng-input > input[readonly] {
-  user-select: none;
-  width: 0;
-  padding: 0;
 }
 
 .ng-select.ng-select-single .ng-select-container .ng-value-container .ng-value {
